--- a/charts/ks-devops/charts/jenkins/Chart.yaml
+++ b/charts/ks-devops/charts/jenkins/Chart.yaml
@@ -1,3 +1,4 @@
+apiVersion: v2
 appVersion: 2.121.3-0217
 description: Open source continuous integration server. It supports multiple SCM tools
   including CVS, Subversion and Git. It can execute Apache Ant and Apache Maven-based
