--- a/.github/workflows/e2e.init.yaml
+++ b/.github/workflows/e2e.init.yaml
@@ -13,10 +13,13 @@ jobs:
   Install:
     name: Chart Install
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 60
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
       - name: Run E2E Test
-        uses: apache/skywalking-infra-e2e@main
+        uses: ./.github/actions/e2e-tool
         with:
           e2e-file: $GITHUB_WORKSPACE/test/e2e/cases/chart-install/e2e.yaml
