Refine wait condition
Signed-off-by: John Niang <johnniang@fastmail.com>

--- a/test/e2e/cases/chart-install/e2e.yaml
+++ b/test/e2e/cases/chart-install/e2e.yaml
@@ -11,8 +11,14 @@ setup:
                  --set image.pullPolicy=Always --set jenkins.ksAuth.enabled=true
       wait:
         - namespace: kubesphere-devops-system
-          resource: pod
+          resource: deployment
+          for: condition=Available
+        - namespace: kubesphere-devops-system
+          resource: pod/s2ioperator-0
           for: condition=Ready
+        - namespace: kubesphere-devops-system
+          resource: job
+          for: condition=Complete
   kind:
     expose-ports:
       - namespace: kubesphere-devops-system
