Remove job wait
Signed-off-by: John Niang <johnniang@fastmail.com>

--- a/test/e2e/cases/chart-install/e2e.yaml
+++ b/test/e2e/cases/chart-install/e2e.yaml
@@ -16,9 +16,9 @@ setup:
         - namespace: kubesphere-devops-system
           resource: pod/s2ioperator-0
           for: condition=Ready
-        - namespace: kubesphere-devops-system
-          resource: job
-          for: condition=Complete
+        # - namespace: kubesphere-devops-system
+        #   resource: job
+        #   for: condition=Complete
   kind:
     expose-ports:
       - namespace: kubesphere-devops-system
