--- a/test/e2e/cases/chart-install/e2e.yaml
+++ b/test/e2e/cases/chart-install/e2e.yaml
@@ -8,7 +8,12 @@ setup:
         helm repo add ks-devops https://kubesphere-sigs.github.io/ks-devops-helm-chart/
         helm repo update
         helm install devops ks-devops/ks-devops -n kubesphere-devops-system --create-namespace \
-                 --set image.pullPolicy=Always --set jenkins.ksAuth.enabled=true
+                 --set jenkins.ksAuth.enabled=true \
+                 --set image.pullPolicy=Never \
+                 --set image.registry=kubespheredev \
+                 --set image.controller.tag=e2e \
+                 --set image.apiserver.tag=e2e \
+                 --set image.tools.tag=e2e
       retryWaitAfter: 1m
       wait:
         - namespace: kubesphere-devops-system
@@ -18,6 +23,10 @@ setup:
           resource: pod/s2ioperator-0
           for: condition=Ready
   kind:
+    import-images:
+      - kubespheredev/devops-controller:e2e
+      - kubespheredev/devops-apiserver:e2e
+      - kubespheredev/devops-tools:e2e
     expose-ports:
       - namespace: kubesphere-devops-system
         resource: deployment/devops-apiserver
