Test for .golangci.yaml change
Signed-off-by: John Niang <johnniang@fastmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,8 @@ run:
   # timeout for analysis, e.g. 30s, 5m, default is 1m
   timeout: 5m
 
+  # Test for code change
+
   skip-dirs:
     - .git
     - .github
