--- a/.github/workflows/e2e.install.yaml
+++ b/.github/workflows/e2e.install.yaml
@@ -1,6 +1,7 @@
 name: E2E - Chart Install
 
 on:
+  push:
   pull_request:
     paths:
       - "**"
@@ -13,7 +14,7 @@ jobs:
     timeout-minutes: 60
     strategy:
       matrix:
-        k8sVersion: ["1.19", "1.20", "1.21", "1.22"]
+        k8sVersion: ["1.22"]
     steps:
       - uses: actions/checkout@v2
 
