--- a/test/e2e/cases/chart-install/expected.yaml
+++ b/test/e2e/cases/chart-install/expected.yaml
@@ -1,5 +1,6 @@
 {{ range $name, $phase := . }}
-  {{ if or (eq $phase "Running") (eq $phase "Succeeded") }}
+  {{ if and (eq $phase "Running") (eq $phase "Succeeded") }}
     {{ $name }}: {{ $phase }}
   {{ end }}
 {{ end }}
+want: more
