--- a/config/samples/devops.kubesphere.io_v1alpha3_pipeline.yaml
+++ b/config/samples/devops.kubesphere.io_v1alpha3_pipeline.yaml
@@ -3,5 +3,27 @@ kind: Pipeline
 metadata:
   name: pipeline-sample
 spec:
-  # Add fields here
-  foo: bar
+  type: pipeline
+  pipeline:
+    name: my-pipeline
+    discarder:
+      days_to_keep: "7"
+      num_to_keep: "10"
+    jenkinsfile: ""
+  template:
+    ref:
+      kind: Template # Available kind: Template(ignorable), ClusterTemplate
+      name: template-sample # 直接修改还是删除？
+      # Default namespace is equal to the Pipeline
+    parameters:
+      - name: gitCloneURL
+        value: "https://github.com/halo-dev/halo"
+        promotable: false
+      - name: revision
+        value: release
+        promotable: false # Here can cover the promotable value to false to prevent from interrupting Pipeline run.
+      - name: buildOnly
+        value: true
+      - name: matrix
+        value: [ "7.3.3-jdk11" ]
+        # Or value: 7.3.3-jdk11
