--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,2 +1,13 @@
 resources:
 - manager.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: controller
+  newName: kubespheredev/devops-controller
+  newTag: master
+
+configMapGenerator:
+  - name: manager-config
+    files:
+      - controller_manager_config.yaml
